<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondaryFunctions">

    <Button
        android:id="@+id/BtnSine"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/BtnSine"
        android:textSize="40sp"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@+id/BtnExponential"
        app:layout_constraintEnd_toStartOf="@id/BtnCosine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/BtnCosine"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/BtnCosine"
        android:textSize="40sp"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@+id/BtnSqrt"
        app:layout_constraintEnd_toStartOf="@id/BtnTangent"
        app:layout_constraintStart_toEndOf="@+id/BtnSine"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/BtnTangent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/BtnTangent"
        android:textSize="40sp"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@id/BtnLogarithm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/BtnCosine"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/BtnExponential"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/BtnExponential"
        android:textSize="40sp"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@+id/BtnBackToMain"
        app:layout_constraintEnd_toStartOf="@id/BtnSqrt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BtnSine" />

    <Button
        android:id="@+id/BtnSqrt"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/BtnSqrt"
        android:textSize="40sp"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@id/BtnConstantPi"
        app:layout_constraintEnd_toStartOf="@id/BtnLogarithm"
        app:layout_constraintStart_toEndOf="@+id/BtnExponential"
        app:layout_constraintTop_toBottomOf="@+id/BtnCosine" />

    <Button
        android:id="@+id/BtnLogarithm"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/BtnLogarithm"
        android:textSize="40sp"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@id/BtnConstantEuler"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/BtnSqrt"
        app:layout_constraintTop_toBottomOf="@+id/BtnTangent" />

    <Button
        android:id="@+id/BtnBackToMain"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/BtnBackToMain"
        android:textSize="40sp"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/BtnConstantPi"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/BtnExponential" />

    <Button
        android:id="@+id/BtnConstantPi"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/BtnConstantPi"
        android:textSize="40sp"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/BtnConstantEuler"
        app:layout_constraintStart_toEndOf="@+id/BtnBackToMain"
        app:layout_constraintTop_toBottomOf="@+id/BtnSqrt" />

    <Button
        android:id="@+id/BtnConstantEuler"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/BtnConstantEuler"
        android:textSize="40sp"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/BtnConstantPi"
        app:layout_constraintTop_toBottomOf="@+id/BtnLogarithm" />
</androidx.constraintlayout.widget.ConstraintLayout>